--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ウィンドウサイズ */
 .inner-block {
     position: relative;
     width: calc(100% - 60px);
@@ -5,12 +6,14 @@
     max-width: 1000px;
 }
 
+/* バックグラウンド */
 .quiz {
     min-height: 76.5vh;
     padding: 100px 0;
     background: #ffc5c5;
 }
 
+/* 問題の上線 */
 .quiz-content {
     border: 1px solid #222;
     background-color: rgba(255, 255, 255, 0.4);
@@ -18,6 +21,7 @@
     position: relative;
 }
 
+/* 問題番号 */
 .qs-number {
     text-align: center;
     font-size: 26px;
@@ -26,6 +30,7 @@
     padding: 20px;
 }
 
+/* 問題文 */
 .question {
     font-size: 32px;
     font-weight: bold;
@@ -36,76 +41,73 @@
     padding: 30px 200px 0px;
 }
 
+/* 解答欄の幅 */
 .answer {
     display: grid;
     position: relative;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    padding: 0 200px 100px;
+    padding-left: 0;
+    list-style: none;
 }
 
+/* 解答欄のフレーム */
 .answer li {
     position: relative;
+    border: 2px solid #000;
+    border-radius: 8px;
+    transition: border 0.3s ease-in-out;
 }
 
+/* 解答欄のレイアウト */
 .answer li label {
     color: #222;
     display: block;
     margin: 0 auto;
-    height: 60px;
+    height: 100px;
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 4px 20px 4px 80px;
+    padding-top: 4px;
     font-weight: bold;
     font-size: 18px;
     line-height: 1.16;
     position: relative;
     transition: 0.3s ease-in-out;
-    border: 1px solid #000;
     white-space: pre-wrap;
-} 
-
-li::marker {
-    display: none;
 }
 
+/* 黒点の非表示 */
+/* li::marker {
+    display: none;
+} */
+
+/* ？ */
 .answer li label:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.answer li label::after {
-    position: absolute;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    content: "";
-    width: 60px;
-    height: 40px;
-    display: flex;
+/* アルファベット */
+.answer li label span {
     align-items: center;
-    justify-content: center;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    z-index: 1;
-    pointer-events: none;
     border-right: 1px solid #000;
-} 
-
-.answer li:nth-child(1) label::after {
-    content: "A";
-} 
-
-.answer li:nth-child(2) label::after {
-    content: "B";
-} 
-
-.answer li:nth-child(3) label::after {
-    content: "C";
+    content: "";
+    display: flex;
+    font-size: 30px;
+    font-weight: bold;
+    height: 60px;
+    justify-content: center;
+    pointer-events: none;
+    text-align: center;
+    width: 70px;
+    z-index: 1;
 }
 
-.answer li:nth-child(4) label::after {
-    content: "D";
+/* 回答欄の文字 */
+.answer li label p {
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    flex-grow: 1;
+    padding: 0 10px;
 }
